gcp/mgs.tf
resource "google_compute_disk" "mgt" {
  for_each = local.compute_disk.mgt
  type     = each.value.type
  size     = each.value.size
  name     = each.value.name
  zone     = var.zone
  labels = merge(
    local.labels,
    {
      name                = each.value.name,
      lustre_target_host  = each.value.host,
      lustre_target_role  = each.value.role,
      lustre_target_index = each.value.index
    }
  )
}

resource "google_compute_disk" "mnt" {
  for_each = local.compute_disk.mnt
  type     = each.value.type
  size     = each.value.size
  name     = each.value.name
  zone     = var.zone
  labels = merge(
    local.labels,
    {
      name                = each.value.name,
      lustre_target_host  = each.value.host,
      lustre_target_role  = each.value.role,
      lustre_target_index = each.value.index
    }
  )
}

resource "google_compute_instance" "mgs" {
  count            = var.mgs.node_count
  name             = format("%s-%s%d", local.prefix, "mgs", count.index)
  zone             = var.zone
  machine_type     = var.mgs.node_type
  min_cpu_platform = var.mgs.node_cpu

  metadata = {
    startup-script = data.template_file.startup_script.rendered
    ssh-keys       = local.ssh_key
  }

  boot_disk {
    auto_delete = var.boot.auto_delete
    initialize_params {
      image = data.google_compute_image.exa.self_link
      type  = var.boot.disk_type
    }
  }

  dynamic "attached_disk" {
    for_each = local.attached_disk.mgt[count.index]
    content {
      source      = google_compute_disk.mgt[attached_disk.key].id
      device_name = attached_disk.value
    }
  }

  dynamic "attached_disk" {
    for_each = local.attached_disk.mnt[count.index]
    content {
      source      = google_compute_disk.mnt[attached_disk.key].id
      device_name = attached_disk.value
    }
  }

  dynamic "scratch_disk" {
    for_each = local.scratch_disk.mgt[count.index]
    content {
      interface = scratch_disk.value
    }
  }

  dynamic "scratch_disk" {
    for_each = local.scratch_disk.mnt[count.index]
    content {
      interface = scratch_disk.value
    }
  }

  service_account {
    email = local.service_account.email
    scopes = [
      "cloud-platform"
    ]
  }

  network_interface {
    subnetwork = local.subnetwork.name
    nic_type   = var.mgs.nic_type
    dynamic "access_config" {
      for_each = var.mgs.public_ip ? [{}] : []
      content {
        network_tier = var.network.tier
      }
    }
  }

  tags = [
    local.prefix,
    local.http_tag
  ]

  labels = merge(
    local.labels,
    {
      lustre_type  = "mgt"
      lustre_index = count.index
    }
  )

  depends_on = [
    google_runtimeconfig_config.fs_config,
    google_runtimeconfig_config.role_config,
    google_runtimeconfig_config.startup_config
  ]
}
